tree-sitter-qsp/grammar.js
    source_file: $ => seq(
      optional($.inter_loc_text),
      repeat(seq($.location_block, optional($.inter_loc_text))),
    ),

    // ── Location blocks ─────────────────────────────────────────────────────

    // PEG: locationBlock = startOfLoc (~endLocMarker statementGroup)* endOfLoc
    location_block: $ => seq(
      $.location_header,
      repeat($._statement_group),
      $.location_end,
    ),

    // PEG: startOfLoc = "#" space* locName space* newline
    // Note: extras handles the spaces around location_name automatically
    location_header: $ => seq($._location_start_mark_ext, $.location_name, $._newline),

    // PEG: locName = locNameChar+ (space+ locNameChar+)*
    // locNameChar = ~(space | newline) any
    location_name: $ => /[^ \t\r\n]+([ \t]+[^ \t\r\n]+)*/,

    // PEG: endOfLoc = "--" endOfLocChar* (newline | &end)
    location_end: $ => prec.right(seq(
      $._location_end_mark_ext,
      optional(token.immediate(/[^\r\n]*/)),
      optional($._newline),
    )),

    // PEG: interLocText = (interLocLine | newline)*
    _statement_group: $ => choice(
      $.single_line_block,
      $.multi_line_block,
      $._newline,
    ),

    // PEG: singleLineBlock = singleLineGroup ws (newline | &end)
    single_line_block: $ => prec.right(seq(
      $._single_line_group,
      $._newline,
    )),

    // PEG: singleLineGroup      = singleLineStatements | statementSeparators
    // PEG: singleLineStatements = (statementSeparators ws)? statementUnitSingleLine (ws statementSeparators ws statementUnitSingleLine)* (ws statementSeparators)?
    // PEG: statementSeparators  = statementSeparator (ws statementSeparator)*
    _single_line_group: $ => prec.right(choice(
      $._single_line_statements,
      $._statement_separators,
    )),

    assignment_statement: $ => prec.dynamic(1, prec.right(seq(
      optional(field('keyword', alias(choice(ci('set'), ci('let')), $.set_keyword))),
      field('variables', $.variable_list),
      field('operator', $.assignment_operator),
      field('value', $._na_arg_list),
    ))),

    // PEG: localStatement = localMarker &delimiterChar ws variableList (ws "=" ws nonAmpersandArgument1plusList)?
    variable_list: $ => prec.right(seq(
      $.variable_ref,
      repeat(seq(',', $.variable_ref)),
    )),

    assignment_operator: $ => choice('=', '+=', '-=', '*=', '/='),

    // ══════════════════════════════════════════════════════════════════════════
    // IF STATEMENTS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: ifSingleLine = ifMarker &delimiterChar ws expression ws ":" ws singleLineGroup
    //   (ws elseIfMarker &delimiterChar ws expression ws ":" ws singleLineGroup)*
    //   (ws elseMarker &delimiterChar (ws ":")? ws singleLineGroup)?
    if_inline: $ => prec.right(seq(
      field('keyword', alias(ci('if'), $.if_keyword)),
      field('condition', $._ext_expression),
      ':',
      field('then', $._single_line_group),
      repeat($.elseif_inline),
      optional($.else_inline),
    )),

    statement: $ => prec.right(seq(
      field('name', $.statement_name),
      optional(choice(
        prec(2, seq('(', ')')),                    // empty args (higher prec than paren_tuple)
        $.paren_args,                              // parenthesized args
        $._na_arg_list,                            // bare args (no &)
      )),
    )),

    statement_name: $ => kw(STATEMENTS),

    // ══════════════════════════════════════════════════════════════════════════
    // USER CALLS  (@@name / @name)
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: userCallStatement = @@name [args]
    na_func_call: $ => prec.right(seq(
      field('prefix', optional($.type_prefix)),
      field('name', $.function_name),
      optional(choice(
        prec(2, seq('(', ')')),
        $.paren_args,
        $._na_unary,                  // single bare arg (no binary ops)
      )),
    )),

    // PEG: functionCall — single arg uses expression (with &)
    // Bare arg uses _ext_unary (not _ext_expression) so that binary operators
    // are NOT consumed: `len 'abc' + 1` → `len('abc') + 1`.
    function_name: $ => kw(FUNCTIONS),

    // ══════════════════════════════════════════════════════════════════════════
    // LABEL / NOTE / IMPLICIT
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: labelStatement = ":" ws labelName
    // PEG: labelName = noteString
    _na_expression: $ => choice($.na_binary, $._na_unary),

    na_binary: $ => choice(
      prec.left(6,  seq($._na_expression, alias(ci('or'),  $.op_or),  $._na_expression)),
      prec.left(7,  seq($._na_expression, alias(ci('and'), $.op_and), $._na_expression)),
      prec.left(10, seq($._na_expression, $._cmp_op, $._na_expression)),
      // NO & at precedence 12
      prec.left(14, seq($._na_expression, alias(choice('+', '-'), $.op_arith), $._na_expression)),
      prec.left(16, seq($._na_expression, alias(ci('mod'), $.op_mod), $._na_expression)),
      prec.left(17, seq($._na_expression, alias(choice('*', '/'), $.op_arith), $._na_expression)),
    ),

    _na_unary: $ => choice($.na_unary, $._na_primary),

    na_unary: $ => choice(
      prec(8,  seq(alias(ci('no'),  $.op_no),  $._na_expression)),
      prec(11, seq(alias(ci('obj'), $.op_obj), $._na_expression)),
      prec(11, seq(alias(ci('loc'), $.op_loc), $._na_expression)),
      prec(18, seq(alias('-', $.op_neg),       $._na_expression)),
    ),

    _ext_expression: $ => choice($.ext_binary, $._ext_unary),

    ext_binary: $ => choice(
      prec.left(6,  seq($._ext_expression, alias(ci('or'),  $.op_or),  $._ext_expression)),
      prec.left(7,  seq($._ext_expression, alias(ci('and'), $.op_and), $._ext_expression)),
      prec.left(10, seq($._ext_expression, $._cmp_op, $._ext_expression)),
      prec.left(12, seq($._ext_expression, alias('&', $.op_amp), $._ext_expression)),
      prec.left(14, seq($._ext_expression, alias(choice('+', '-'), $.op_arith), $._ext_expression)),
      prec.left(16, seq($._ext_expression, alias(ci('mod'), $.op_mod), $._ext_expression)),
      prec.left(17, seq($._ext_expression, alias(choice('*', '/'), $.op_arith), $._ext_expression)),
    ),

    ext_unary: $ => choice(
      prec(8,  seq(alias(ci('no'),  $.op_no),  $._ext_expression)),
      prec(11, seq(alias(ci('obj'), $.op_obj), $._ext_expression)),
      prec(11, seq(alias(ci('loc'), $.op_loc), $._ext_expression)),
      prec(18, seq(alias('-', $.op_neg),       $._ext_expression)),
    ),

    _ml_expression: $ => choice($.ml_binary, $._ml_unary),

    ml_binary: $ => choice(
      prec.left(6,  seq($._ml_expression, optional($._nls), alias(ci('or'),  $.op_or),  optional($._nls), $._ml_expression)),
      prec.left(7,  seq($._ml_expression, optional($._nls), alias(ci('and'), $.op_and), optional($._nls), $._ml_expression)),
      prec.left(10, seq($._ml_expression, optional($._nls), $._cmp_op, optional($._nls), $._ml_expression)),
      prec.left(12, seq($._ml_expression, optional($._nls), alias('&', $.op_amp), optional($._nls), $._ml_expression)),
      prec.left(14, seq($._ml_expression, optional($._nls), alias(choice('+', '-'), $.op_arith), optional($._nls), $._ml_expression)),
      prec.left(16, seq($._ml_expression, optional($._nls), alias(ci('mod'), $.op_mod), optional($._nls), $._ml_expression)),
      prec.left(17, seq($._ml_expression, optional($._nls), alias(choice('*', '/'), $.op_arith), optional($._nls), $._ml_expression)),
      // Never matches (see _ml_unreachable). It only puts a newline shift
      // below every operator's precedence into each state after an operand.
      // Tree-sitter drops a reduce at generate time when every competing
      // shift has precedence >= it, so without this the loosest operator
      // (`or`) could not end right before a newline: `(a or b⏎)`,
      // `[a or b⏎]`, `<<a or b⏎>>` and `f(a or b⏎, c)` would all fail on
      // the closer. With a lower shift present the conflict stays
      // unresolved, [$.ml_binary] forks GLR, and the closer picks the branch.
      prec.left(-1, seq($._ml_expression, $._nls, $._ml_unreachable)),
    ),

    _cmp_op: $ => alias(choice('<>', '!', '<=', '=<', '>=', '=>', '=', '<', '>'), $.op_cmp),

    // PEG: parenthesizedExpression = "(" mws multilineExpression mws ")"
    // Inside parens → multiline context
    paren_expr: $ => seq('(', optional($._nls), $._ml_expression, optional($._nls), ')'),

    // ── Argument lists ──────────────────────────────────────────────────────

    // PEG: nonAmpersandArgument1plusList
    _na_arg_list: $ => seq($._na_expression, repeat(seq(',', $._na_expression))),

    // PEG: argument1plusList (with &)
    paren_args: $ => prec(1, seq(
      '(', optional($._nls),
      $._ml_expression, optional($._nls),
      repeat(seq(',', optional($._nls), $._ml_expression, optional($._nls))),
      ')',
    )),

    // ══════════════════════════════════════════════════════════════════════════
    // TUPLES
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: tuple = emptyTuple | nonEmptyTuple | emptyPseudoTuple | nonEmptyPseudoTuple
    variable_ref: $ => prec.right(seq(
      field('prefix', optional($.type_prefix)),
      field('name', $.identifier_text),
      optional(field('index', $.array_index)),
    )),

    // PEG: multilineVariableRef = varNameWithPrefix (mws (emptyArrayIndex | arrayIndex))?
    // No prec.right — GLR conflict declared so the parser forks on '\n':
    // one version tries array access (x\n[0]), the other reduces as a bare
    // variable and lets ml_binary handle 'x\n+ y'.
    ml_variable_ref: $ => seq(
      field('prefix', optional($.type_prefix)),
      field('name', $.identifier_text),
      optional(seq(optional($._nls), field('index', $.array_index))),
    ),

    // PEG: arrayIndex = "[" mws multilineArgument1plusList mws "]"
    // PEG: emptyArrayIndex = "[" mws "]"
    type_prefix: $ => choice('#', '$', '%'),

    // ══════════════════════════════════════════════════════════════════════════
    // STRINGS
    // ══════════════════════════════════════════════════════════════════════════

    // All QSP strings can contain <<expr>> interpolation.
    // Strings CAN span multiple lines (PEG: rawSingleQuotedChar = ~"'" any).
    // Unified: interpolated string IS the string — if no <<>> appears, it's
    // simply a string without subexpressions.
    string: $ => choice(
      $.single_quoted_string,
      $.double_quoted_string,
    ),

    single_quoted_string: $ => seq(
      "'",
      repeat(choice(
        alias($._string_interpolation_sq, $.string_interpolation),
        "''", token(prec(1, /[^'<]+/)), token(prec(-1, '<')),
      )),
      "'",
    ),

    _string_interpolation_sq: $ => seq(
      '<<',
      choice(
        seq(optional($._nls), $._ml_expression, optional($._nls)),
        alias($._intp_raw_body_sq_ext, $.interpolation_raw_body),
      ),
      '>>',
    ),

    number_literal: $ => /\d+/,

    // ══════════════════════════════════════════════════════════════════════════
    // CODE BLOCKS
    // ══════════════════════════════════════════════════════════════════════════

    // PEG: codeBlock = syntacticCodeBlock | rawCodeBlock
    //   Try syntactic first; fall back to raw when syntactic fails to balance.
    //
    // Tree-sitter is GLR (not PEG).  We unify both alternatives in one
    // rule by listing the syntactic statement-group first (preferred via
    // higher static prec) and the raw-text fallbacks last.  When the
    // syntactic alternative produces a valid parse, it wins; when it
    // would introduce ERROR/MISSING (e.g. an unbalanced `if a=0:` inside
    // `{<qhtml>... if a=0: ...</qhtml>}`), the raw alternative absorbs
    // the offending span as anonymous text instead, preventing the
    // unclosed block from swallowing the rest of the location.
    //
    // The per-char raw token uses `token(prec(-10, ...))` so it loses
    // the lexer race against every normal lexical token (identifiers,
    // keywords, numbers, operators, …).  It only fires when the
    // syntactic branch can't make progress at the current position.
    identifier_text: $ => /[^\s&'"()\[\]=!<>+\-\/*:,{}@0-9#$%][^\s&'"()\[\]=!<>+\-\/*:,{}]*/,

    // ══════════════════════════════════════════════════════════════════════════
    // WHITESPACE / NEWLINES
    // ══════════════════════════════════════════════════════════════════════════

    // lineContinuation = <space or tab> "_" newline
    // line_continuation is declared in externals and handled by src/scanner.c

    _newline: $ => /\r?\n/,

    // One or more newlines — used in multiline contexts (parens, brackets, <<>>)
    // as optional($._nls) to mean "zero or more newlines".
    _nls: $ => prec.right(repeat1($._newline)),

    // A token that can't occur in source text: see the last ml_binary alternative.
    _ml_unreachable: $ => token(prec(-1, /\u0000\u0000\u0000/)),
  },
});
